--- a/tailwindcss-personalizacion/index.html
+++ b/tailwindcss-personalizacion/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="p-10 bg-red-500 text-center text-white">
-      <h1 class="text-3xl font-bold">Hello world!</h1>
+    <div
+      class="bg-bg-image-001 bg-cover bg-center h-screen p-10 bg-rojo-500 text-center text-white celular:bg-green-600"
+    >
+      <h1 class="text-3xl font-bold text-color-blanco">Hello world!</h1>
     </div>
+    <div class="bg-rose-600 text-white">asd</div>
   </body>
 </html>
