--- a/tailwindcss-personalizacion/index.html
+++ b/tailwindcss-personalizacion/index.html
@@ -8,11 +8,28 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div
+    <div class="p-20">
+      <h1>Hola</h1>
+      <p>Parrafo</p>
+      <button class="boton">Dame Click</button>
+      <button class="boton boton-rojo">Dame Click</button>
+      <button class="boton boton-verde">Dame Click</button>
+      <button class="boton hover:boton-rojo">Dame Click</button>
+    </div>
+
+    <div class="wrapper">
+      <img
+        class="w-full bg-image-center p-4"
+        src="https://hips.hearstapps.com/hmg-prod/images/the-last-of-us-2-final-historia-1-1593117500.jpg"
+        alt=""
+      />
+    </div>
+
+    <!-- <div
       class="bg-bg-image-001 bg-cover bg-center h-screen p-10 bg-rojo-500 text-center text-white celular:bg-green-600"
     >
       <h1 class="text-3xl font-bold text-color-blanco">Hello world!</h1>
     </div>
-    <div class="bg-rose-600 text-white">asd</div>
+    <div class="bg-rose-600 text-white">asd</div> -->
   </body>
 </html>
