--- a/tailwindcss-formulario/index.html
+++ b/tailwindcss-formulario/index.html
@@ -74,5 +74,21 @@
         </form>
       </section>
     </main>
+    <script>
+      function ValidateIPaddress(ipaddress) {
+        if (
+          /^(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$/.test(
+            ipaddress
+          )
+        ) {
+          return true;
+        }
+        alert("You have entered an invalid IP address!");
+        return false;
+      }
+
+      const result = ValidateIPaddress("01.0.0.0");
+      console.log(result);
+    </script>
   </body>
 </html>
